// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ArgyleModalAdapter > event:other > logs ApplicantAccessedArgyleModalMFAScreen Event 1`] = `
{
  "argyle.eventName": "mfa - opened",
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantAttemptedArgyleLogin Event 1`] = `
{
  "argyle.eventName": "login - form submitted",
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantClickedArgyleLoginHelp for login help clicked event 1`] = `
{
  "argyle.eventName": "login - login help clicked",
  "argyle.userId": "test-user-id",
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantClosedArgyleLinkFromErrorScreen for link closed event 1`] = `
{
  "argyle.eventName": "link closed",
  "argyle.userId": "test-user-id",
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantDisconnectedArgyleAccount for account status disconnected event 1`] = `
{
  "argyle.eventName": "account status - disconnected",
  "argyle.userId": "test-user-id",
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleAccountStateError for account error with account issue code 1`] = `
{
  "argyle.connectionStatus": "error",
  "argyle.errorCode": "account_not_found",
  "argyle.eventName": "account error - opened",
  "argyle.userId": "test-user-id",
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleAuthenticationError for account error with auth error code 1`] = `
{
  "argyle.connectionStatus": "error",
  "argyle.errorCode": "invalid_credentials",
  "argyle.eventName": "account error - opened",
  "argyle.userId": "test-user-id",
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleAuthenticationError for login with auth_required error 1`] = `
{
  "argyle.errorCode": "auth_required",
  "argyle.eventName": "login - opened",
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleAuthenticationError for login with expired_credentials error 1`] = `
{
  "argyle.errorCode": "expired_credentials",
  "argyle.eventName": "login - opened",
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleAuthenticationError for login with invalid_auth error 1`] = `
{
  "argyle.errorCode": "invalid_auth",
  "argyle.eventName": "login - opened",
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleAuthenticationError for login with invalid_credentials error 1`] = `
{
  "argyle.errorCode": "invalid_credentials",
  "argyle.eventName": "login - opened",
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleConnectionPendingEvent for connectionStatus 'awaiting_user_action' 1`] = `
{
  "argyle.connectionStatus": "awaiting_user_action",
  "argyle.eventName": "account error - opened",
  "argyle.userId": "test-user-id",
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleConnectionPendingEvent for connectionStatus 'connecting' 1`] = `
{
  "argyle.connectionStatus": "connecting",
  "argyle.eventName": "account error - opened",
  "argyle.userId": "test-user-id",
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleConnectionPendingEvent for connectionStatus 'updating' 1`] = `
{
  "argyle.connectionStatus": "updating",
  "argyle.eventName": "account error - opened",
  "argyle.userId": "test-user-id",
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleCredentialError for account error with credential error code 1`] = `
{
  "argyle.connectionStatus": "error",
  "argyle.errorCode": "invalid_employer_identifier",
  "argyle.eventName": "account error - opened",
  "argyle.userId": "test-user-id",
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleLimitError for account error with limit error code 1`] = `
{
  "argyle.connectionStatus": "error",
  "argyle.errorCode": "login_attempts_exceeded",
  "argyle.eventName": "account error - opened",
  "argyle.userId": "test-user-id",
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleLinkOpenError for error opened event 1`] = `
{
  "argyle.errorType": "invalid_user_token",
  "argyle.eventName": "error - opened",
  "argyle.userId": "test-user-id",
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleMfaError for account error with MFA error code 1`] = `
{
  "argyle.connectionStatus": "error",
  "argyle.errorCode": "mfa_timeout",
  "argyle.eventName": "account error - opened",
  "argyle.userId": "test-user-id",
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleMfaError for login with mfa_cancelled error 1`] = `
{
  "argyle.errorCode": "mfa_cancelled_by_the_user",
  "argyle.eventName": "login - opened",
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgylePlatformError for account error with platform error code 1`] = `
{
  "argyle.connectionStatus": "error",
  "argyle.errorCode": "platform_unavailable",
  "argyle.eventName": "account error - opened",
  "argyle.userId": "test-user-id",
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgylePlatformError for login with connection_unavailable error 1`] = `
{
  "argyle.errorCode": "connection_unavailable",
  "argyle.eventName": "login - opened",
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleSystemError for account error with system error code 1`] = `
{
  "argyle.connectionStatus": "error",
  "argyle.errorCode": "system_error",
  "argyle.eventName": "account error - opened",
  "argyle.userId": "test-user-id",
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleUndefinedAccountError for account error with no error code 1`] = `
{
  "argyle.connectionStatus": "error",
  "argyle.eventName": "account error - opened",
  "argyle.userId": "test-user-id",
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredUnknownArgyleEvent for unknown events 1`] = `
{
  "argyle.eventName": "some-future-event",
  "argyle.someNewProperty": "value",
  "argyle.userId": "test-user-id",
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantUpdatedArgyleSearchTerm Event 1`] = `
{
  "argyle.eventName": "search - term updated",
  "argyle.tab": "tab",
  "argyle.term": "search term",
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantViewedArgyleAccountStatus for account status opened event 1`] = `
{
  "argyle.eventName": "account status - opened",
  "argyle.userId": "test-user-id",
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantViewedArgyleDefaultProviderSearch Event 1`] = `
{
  "argyle.eventName": "search - opened",
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantViewedArgyleLoginPage Event 1`] = `
{
  "argyle.eventName": "login - opened",
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantViewedArgyleProviderConfirmation Event 1`] = `
{
  "argyle.eventName": "search - link item selected",
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantViewedArgyleSuccessScreen for success opened event 1`] = `
{
  "argyle.eventName": "success - opened",
  "argyle.userId": "test-user-id",
}
`;

exports[`ArgyleModalAdapter > event:other > logs onAccountCreated Event 1`] = `
{
  "argyle.accountId": "account-id",
  "argyle.platformId": "platform-id",
}
`;

exports[`ArgyleModalAdapter > event:other > logs onAccountError Event 1`] = `
{
  "argyle.accountId": "account-id",
  "argyle.platformId": "platform-id",
}
`;

exports[`ArgyleModalAdapter > event:other > logs onAccountRemoved Event 1`] = `
{
  "argyle.accountId": "account-id",
  "argyle.platformId": "platform-id",
}
`;

exports[`ArgyleModalAdapter > open > calls track user action 1`] = `
[
  "ApplicantSelectedEmployerOrPlatformItem",
  {
    "is_default_option": true,
    "item_id": "id",
    "item_name": "test-name",
    "item_type": "response-type",
    "locale": "en",
    "provider_name": "pinwheel",
  },
]
`;
